--- a/template_pizzaria/src/components/About.css
+++ b/template_pizzaria/src/components/About.css
@@ -35,3 +35,19 @@
     display: flex;
     gap: 3rem;
 }
+
+@media screen and (max-width: 60rem) {
+    .about {
+    padding: 1rem 3rem;
+    flex-direction: column;
+    gap: 3rem;
+    align-items: center;
+}
+
+.about_content h2 {
+    font-size: 2.25rem;
+    font-weight: 800;
+    color: #1F2937;
+    text-align: center;
+}
+}
