--- a/template_pizzaria/src/components/Header.css
+++ b/template_pizzaria/src/components/Header.css
@@ -50,3 +50,108 @@
 .header_button svg {
     font-size: 1rem;
 }
+
+.header_menu {
+    width: 2.5rem;
+    border-radius: 50%;
+    aspect-ratio: 1/1;
+    background-color: #B91C1C;
+    position: relative;
+    display: none;
+}
+
+.header_menu span {
+    cursor: pointer;
+    /* background-color: green; */
+    width: 100%;
+    height: 100%;
+    display: block;
+}
+
+.header_menu div {
+    width: 50%;
+    height: 3px;
+    background-color: #fff;
+    position: absolute;
+    border-radius: 1rem;
+}
+
+.header_menu div:first-child {
+    top: .7rem;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.header_menu div:nth-child(2) {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.header_menu div:last-child {
+    bottom: .7rem;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+@media screen and (max-width: 64rem) {
+
+    .header {
+        padding: .5rem 2rem;
+        justify-content: space-between;
+    }
+
+    .header * {
+        z-index: 2;
+    }
+
+    .header nav {
+        position: absolute;
+        text-align: right;
+        background-color: #fff;
+        padding: 2rem 3rem;
+        right: 0;
+        left: 0;
+        z-index: 1;
+        transition: 1s;
+    }
+
+    .header nav.close {
+        top: -100%;
+        opacity: 0;
+    }
+
+    .header nav.open {
+        top: 5rem;
+        opacity: 1;
+    }
+
+    .header_nav {
+        flex-direction: column;
+        gap: 0;
+    }
+
+    .header_nav a {
+        width: 100%;
+        padding: 1rem 2rem;
+        /* background-color: red; */
+        display: block;
+        border-radius: 1rem;
+        transition: all .3s ease-in-out;
+    }
+
+    .header_nav a:hover {
+        background-color: #B91C1C;
+        color: #fff;
+    }
+
+    .header_menu {
+        display: revert;
+    }
+
+    .header_button {
+        display: flex;
+        align-items: center;
+        gap: 1rem;
+    }
+}
