--- a/template_pizzaria/src/components/Menu.css
+++ b/template_pizzaria/src/components/Menu.css
@@ -29,3 +29,9 @@
     justify-content: center;
     align-items: center;
 }
+
+@media screen and (max-width: 60rem) {
+    .menu {
+        padding: 3rem;
+    }
+}
