--- a/template_pizzaria/src/components/Review.css
+++ b/template_pizzaria/src/components/Review.css
@@ -112,4 +112,19 @@
     cursor: pointer;
     transition: .1s ease-in-out;
 }
+
+@media screen and (max-width: 60rem) {
+  .review {
+  margin: 3rem;
+  gap: 2rem;
+  text-align: center;
+}
+
+.review_main {
+  overflow-x: scroll;
+}
+
+.review_controls {
+    display: none;
+}
 }
