--- a/template_pizzaria/src/components/Header.css
+++ b/template_pizzaria/src/components/Header.css
@@ -1,157 +1,175 @@
 .header {
-    display: flex;
-    padding: .5rem 5rem;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #fff;
+  display: flex;
+  padding: 0.5rem 5rem;
+  align-items: center;
+  justify-content: space-between;
+  backdrop-filter: blur(10px);
+  background-color: rgba(255, 255, 255, 0.7);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 3;
 }
 
 .header_logo {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
 
 .header_logo img {
-    width: 4rem;
-    aspect-ratio: 1/1;
+  width: 4rem;
+  aspect-ratio: 1/1;
 }
 
 .header_logo_brand h1 {
-    font-size: 1.5rem;
-    font-weight: bold;
-    color: #1F2937;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: #1f2937;
 }
 
 .header_logo_brand p {
-    font-size: .875rem;
-    color: #6B7280;
+  font-size: 0.875rem;
+  color: #6b7280;
 }
 
 .header_nav {
-    display: flex;
-    gap: 2rem;
-    font-weight: 500;
-    color: #374151;
+  display: flex;
+  gap: 2rem;
+  font-weight: 500;
+  color: #374151;
 }
 
 .header_button button {
-    padding: .75rem 1.5rem;
-    background-color: #B91C1C;
-    border-radius: 1.5rem;
-    color: #fff;
-    font-weight: 600;
-    display: flex;
-    align-items: center;
-    gap: .75rem;
-    border: none;
+  padding: 0.75rem 1.5rem;
+  background-color: #b91c1c;
+  border-radius: 1.5rem;
+  color: #fff;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  gap: 0.75rem;
+  border: none;
 }
 
 .header_button svg {
-    font-size: 1rem;
+  font-size: 1rem;
 }
 
 .header_menu {
-    width: 2.5rem;
-    border-radius: 50%;
-    aspect-ratio: 1/1;
-    background-color: #B91C1C;
-    position: relative;
-    display: none;
+  width: 2.5rem;
+  border-radius: 50%;
+  aspect-ratio: 1/1;
+  background-color: #b91c1c;
+  position: relative;
+  display: none;
 }
 
 .header_menu span {
-    cursor: pointer;
-    /* background-color: green; */
-    width: 100%;
-    height: 100%;
-    display: block;
+  cursor: pointer;
+  /* background-color: green; */
+  width: 100%;
+  height: 100%;
+  display: block;
 }
 
 .header_menu div {
-    width: 50%;
-    height: 3px;
-    background-color: #fff;
-    position: absolute;
-    border-radius: 1rem;
+  width: 50%;
+  height: 3px;
+  background-color: #fff;
+  position: absolute;
+  border-radius: 1rem;
 }
 
 .header_menu div:first-child {
-    top: .7rem;
-    left: 50%;
-    transform: translateX(-50%);
+  top: 0.7rem;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .header_menu div:nth-child(2) {
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .header_menu div:last-child {
-    bottom: .7rem;
-    left: 50%;
-    transform: translateX(-50%);
+  bottom: 0.7rem;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 @media screen and (max-width: 64rem) {
+  .header {
+    padding: 0.5rem 2rem;
+    justify-content: space-between;
+  }
 
-    .header {
-        padding: .5rem 2rem;
-        justify-content: space-between;
-    }
+  .header * {
+    z-index: 4;
+  }
 
-    .header * {
-        z-index: 2;
-    }
+  .header nav {
+    position: absolute;
+    text-align: right;
+    backdrop-filter: blur(10px);
+    background-color: rgba(255, 255, 255, 0.7);
+    right: 0;
+    left: 0;
+    z-index: 3;
+    transition: max-height 1s;
+    top: 5rem;
+    /* padding: 2rem 3rem; */
+    overflow: hidden;
+  }
 
-    .header nav {
-        position: absolute;
-        text-align: right;
-        background-color: #fff;
-        padding: 2rem 3rem;
-        right: 0;
-        left: 0;
-        z-index: 1;
-        transition: 1s;
-    }
+  .header nav.close {
+    padding: 0;
+    opacity: 1;
+    max-height: 0;
+  }
 
-    .header nav.close {
-        top: -100%;
-        opacity: 0;
-    }
+  .header nav.open {
+    max-height: 1000px;
+    opacity: 1;
+  }
 
-    .header nav.open {
-        top: 5rem;
-        opacity: 1;
-    }
+  .header_nav {
+    flex-direction: column;
+    gap: 0;
+  }
 
-    .header_nav {
-        flex-direction: column;
-        gap: 0;
-    }
+  .header_nav a {
+    width: 100%;
+    padding: 1rem 2rem;
+    /* background-color: red; */
+    display: block;
+    border-radius: 1rem;
+    transition: all 0.3s ease-in-out;
+  }
 
-    .header_nav a {
-        width: 100%;
-        padding: 1rem 2rem;
-        /* background-color: red; */
-        display: block;
-        border-radius: 1rem;
-        transition: all .3s ease-in-out;
-    }
+  .header_nav a:hover {
+    background-color: #b91c1c;
+    color: #fff;
+  }
 
-    .header_nav a:hover {
-        background-color: #B91C1C;
-        color: #fff;
-    }
+  .header_menu {
+    display: revert;
+  }
 
-    .header_menu {
-        display: revert;
-    }
+  .header_button {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+  }
 
-    .header_button {
-        display: flex;
-        align-items: center;
-        gap: 1rem;
-    }
+  .hide-mobile {
+    display: none;
+  }
+
+  .header_button button {
+    padding: 0.75rem;
+    background-color: #b91c1c;
+  }
 }
