--- a/template_pizzaria/src/components/ReviewItem.css
+++ b/template_pizzaria/src/components/ReviewItem.css
@@ -69,3 +69,26 @@
     font-size: 1rem;
     color: #4B5563;
 }
+
+@media screen and (max-width: 60rem) {
+  .reviewItem {
+    padding: 1rem;
+
+    border: 1px solid #E5E7EB;
+    border-radius: 1rem;
+    box-shadow: 0px 2px 8px #000;
+    min-width: 35vw;
+    scroll-snap-align: center;
+}
+}
+
+@media screen and (max-width: 48rem) {
+  .reviewItem {
+    padding: 1rem;
+    border: 1px solid #E5E7EB;
+    border-radius: 1rem;
+    box-shadow: 0px 2px 8px #000;
+    min-width: 45vw;
+    scroll-snap-align: center;
+}
+}
