--- a/template_pizzaria/src/components/MenuItem.css
+++ b/template_pizzaria/src/components/MenuItem.css
@@ -10,7 +10,16 @@
 .menu_item_img {
   width: 100%;
   height: 50%;
-  background-color: #8b5a2b;
+  /* background-color: #8b5a2b; */
+  position: relative;
+  overflow: hidden;
+}
+
+.menu_item_img img {
+  width: 100%;
+  position: absolute;
+  /* bottom: 0; */
+
 }
 
 .menu_item_content {
@@ -69,7 +78,13 @@
   .menu_item_img {
   width: 100%;
   height: 45%;
-  background-color: #8b5a2b;
+  /* background-color: #8b5a2b; */
+}
+
+.menu_item_img img {
+  width: 100%;
+  object-fit: cover;
+
 }
 
 .menu_item_content {
